Fixing spacing between skills listson resume page

--- a/portfolio-remastered/src/components/HeroImg4.css
+++ b/portfolio-remastered/src/components/HeroImg4.css
@@ -38,7 +38,7 @@
     }
     
     .hero .content p{
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: center;
         font-weight: 200;
         text-transform: uppercase;
